# c_cpp_techno

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  ansi_seq.h  io_tools.c  io_tools.h  main.c  proc_tools.c  proc_tools.h  ret_codes.h  run_pos_tests.sh  test.c  test.h  test_main.c
IT1/: CMakeLists.txt  io_tools.h  proc_tools.h  ret_codes.h  test.c
IT1/tests_in/: test_3  test_4  test_6
IT1/tests_out/: test_5
IT2/: CMakeLists.txt  Vector.h  errcodes.h  experiment.cpp  main.cpp  my_vector.h  optimisation.h  parallelAvg.cpp  parallelAvg.h  parallel_avg.cpp  parallel_avg.h  simpleAvg.cpp  simpleAvg.h  simple_avg.cpp  simple_avg.h  test.cpp
IT2/func_tests/: test1.txt
testCMake/: CMakeLists.txt  hello.cpp  hello2.cpp  main.cpp
testCMake/cm/: main
tests_in/: test_4  test_5  test_6
tests_out/: test_3
